# AEIR-Website

./: MANIFEST.in  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py
adhesion/: admin.py  card.py  forms.py  models.py
adhesion/migrations/: 0001_initial.py  0002_auto_20190930_1222.py  0003_auto_20191003_1151.py  0004_adhesion_valid_infos.py
administration/: csv_extract.py  forms.py  urls.py  views.py
aeir_website/: README.md  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
aeir_website/adhesion/: admin.py  apps.py  card.py  forms.py  models.py
aeir_website/administration/: admin.py  csv_extract.py  forms.py  models.py  urls.py  views.py
aeir_website/aeir_website/: db.sqlite3  settings.py  urls.py  wsgi.py
aeir_website/content/: admin.py  forms.py  models.py  urls.py  views.py
aeir_website/templates/: 404.html  base.html
content/: admin.py  forms.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_auto_20191025_1403.py
docs/source/: conf.py
static/css/: style.css
templates/: base.html
templates/administration/: adherent_delete.html  adherent_search.html  adherent_update.html  administration.html  club_create.html  club_list.html  event_create.html  event_delete.html  event_list.html  logout.html  new_adherent_detail.html  news_delete.html  partner_create.html  partner_delete.html  partner_detail.html  partner_list.html  partner_update.html  permission_denied.html  team_create.html  team_delete.html
templates/content/: adhesion.html  adhesion_need_modification.html  frontpage.html  news.html  (+1 more)
(+114 files in other folders)
