[metadata]
name = aeir_website
version = 0.0.1 dev
author = Théo Guyard
author-email = guyard.theo@gmail.com
description-file = README.md
requires-dist = setuptools

[options]
include_package_data = True
python_requires = >= 3.6.*
setup_requires =
    setuptools
install_requires =
    Django
    django-bootstrap-datepicker-plus
    django-bootstrap4
    django-ckeditor
    django-cleanup
    django-crispy-forms
    django-filter
    django-js-asset
    django-ranged-response
    django-simple-captcha
    django-stdimage
    Pillow
    reportlab

[bdist_wheel]
universal = true